Change site name in migrate

--- a/deployment-ha.yaml
+++ b/deployment-ha.yaml
@@ -93,6 +93,9 @@ spec:
             - name: django-settings                                
               mountPath: /app/gracedb_project/config/settings/container/cnaf_test.py
               subPath: cnaf_test.py                                
+            - name: django-update-site                                
+              mountPath: /app/gracedb_project/gracedb/migrations/sites/0002_update_site.py
+              subPath: 0002_update_site.py 
             - name: cinder-gracedb-ha                              
               mountPath: "/app/db_data"            
           livenessProbe:
@@ -139,6 +142,9 @@ spec:
         - name: django-settings                                    
           configMap:                                               
               name: django-settings-cnaf-test                      
+        - name: django-update-site
+          configMap:
+              name: django-update-site
         - name: cinder-gracedb-ha                                  
           persistentVolumeClaim:                                   
             claimName: cinder-gracedb-test-ha
